<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.indiewalkabout.cleantheworld.UI.InsertPlasticCollectionActivity">

    <ImageButton
        android:id="@+id/plastic_btn"
        android:layout_width="182dp"
        android:layout_height="179dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/plasticbtn"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plastic" />

    <TextView
        android:id="@+id/howManyPlastic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/how_many_plastic_items"
        android:text="@string/how_many_plastic_items"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/plasticItems_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plasticItems_et"
        app:layout_constraintTop_toBottomOf="@+id/plastic_btn" />

    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
        android:id="@+id/plasticItems_et"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_number_of_plastic_items_collected"
        android:inputType="number"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/plastic_btn"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/plastic_btn"
        app:layout_constraintTop_toBottomOf="@+id/howManyPlastic_tv"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/plasticItem_Descrip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_facultative"
        android:text="@string/description_facultative"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/plasticItem_Descrip_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plasticItem_Descrip_et"
        app:layout_constraintTop_toBottomOf="@+id/plasticItems_et" />

    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
        android:id="@+id/plasticItem_Descrip_et"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insert_a_description_if_you_want"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/plasticItems_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plasticItems_et"
        app:layout_constraintTop_toBottomOf="@+id/plasticItem_Descrip_tv"
        tools:targetApi="o" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/press_button_to_save"
        android:text="@string/savebtn"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/cancel_plastic_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_plastic_btn"
        app:layout_constraintVertical_bias="0.551" />


    <Button
        android:id="@+id/cancel_plastic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancelbtn"
        app:layout_constraintEnd_toStartOf="@+id/save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plasticItem_Descrip_et" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_key_bottom_banner"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
